// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extractTargetNoteData > handles different note durations 1`] = `
[
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 2,
      "harmonyDuration": 8,
      "harmonyKind": "dominant",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "G",
      "keyFifths": 0,
      "startPitchAlter": 0,
      "startPitchOctave": 3,
      "startPitchStep": "B",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "C",
    },
    "sequence": {
      "notes": [
        {
          "duration": 4,
          "pitchAlter": 0,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
        {
          "duration": 1,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "F",
        },
        {
          "duration": 1,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "E",
        },
        {
          "duration": 2,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "D",
        },
      ],
    },
  },
]
`;

exports[`extractTargetNoteData > handles key signature changes 1`] = `
[
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "major-seventh",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "C",
      "keyFifths": 0,
      "startPitchAlter": 0,
      "startPitchOctave": 4,
      "startPitchStep": "C",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "C",
    },
    "sequence": {
      "notes": [
        {
          "duration": 4,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "C",
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "dominant",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "C",
      "keyFifths": -1,
      "startPitchAlter": 0,
      "startPitchOctave": 4,
      "startPitchStep": "C",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "F",
    },
    "sequence": {
      "notes": [
        {
          "duration": 4,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "C",
        },
      ],
    },
  },
]
`;

exports[`extractTargetNoteData > handles measures with multiple chords 1`] = `
[
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 2,
      "harmonyKind": "minor-seventh",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "D",
      "keyFifths": 0,
      "startPitchAlter": 0,
      "startPitchOctave": 4,
      "startPitchStep": "D",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "G",
    },
    "sequence": {
      "notes": [
        {
          "duration": 2,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "D",
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 2,
      "harmonyKind": "dominant",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "G",
      "keyFifths": 0,
      "startPitchAlter": 0,
      "startPitchOctave": 4,
      "startPitchStep": "G",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "C",
    },
    "sequence": {
      "notes": [
        {
          "duration": 2,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
      ],
    },
  },
]
`;

exports[`extractTargetNoteData > handles multiple measures 1`] = `
[
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "minor-seventh",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "D",
      "keyFifths": 0,
      "startPitchAlter": 0,
      "startPitchOctave": 4,
      "startPitchStep": "D",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "G",
    },
    "sequence": {
      "notes": [
        {
          "duration": 4,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "D",
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "dominant",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "G",
      "keyFifths": 0,
      "startPitchAlter": 0,
      "startPitchOctave": 4,
      "startPitchStep": "G",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "C",
    },
    "sequence": {
      "notes": [
        {
          "duration": 4,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
      ],
    },
  },
]
`;

exports[`extractTargetNoteData > handles multiple measures with repeated harmonies 1`] = `
[
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "dominant",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "G",
      "keyFifths": 0,
      "startPitchAlter": 0,
      "startPitchOctave": 4,
      "startPitchStep": "G",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "D",
    },
    "sequence": {
      "notes": [
        {
          "duration": 4,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "dominant",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "G",
      "keyFifths": 0,
      "startPitchAlter": 0,
      "startPitchOctave": 4,
      "startPitchStep": "D",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "C",
    },
    "sequence": {
      "notes": [
        {
          "duration": 4,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "D",
        },
      ],
    },
  },
]
`;

exports[`extractTargetNoteData > handles note alter signs 1`] = `
[
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "dominant",
      "harmonyRootAlter": -1,
      "harmonyRootStep": "D",
      "keyFifths": 0,
      "startPitchAlter": -1,
      "startPitchOctave": 4,
      "startPitchStep": "D",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "C",
    },
    "sequence": {
      "notes": [
        {
          "duration": 4,
          "pitchAlter": -1,
          "pitchOctave": 4,
          "pitchStep": "D",
        },
      ],
    },
  },
]
`;

exports[`extractTargetNoteData > should extract target note data from a bass part 1`] = `
[
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "dominant",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "G",
      "keyFifths": 0,
      "startPitchAlter": 0,
      "startPitchOctave": 4,
      "startPitchStep": "G",
      "targetPitchAlter": 0,
      "targetPitchOctave": 4,
      "targetPitchStep": "C",
    },
    "sequence": {
      "notes": [
        {
          "duration": 4,
          "pitchAlter": 0,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
      ],
    },
  },
]
`;
